# proc-macro-test

./: Cargo.toml
namespace-attributes-internals/: Cargo.toml
namespace-attributes-internals/src/: lib.rs
namespace-attributes-macros/: Cargo.toml
namespace-attributes-macros/src/: derive_enum.rs  derive_struct.rs  lib.rs  ns.rs
namespace-attributes-test/: Cargo.toml
namespace-attributes-test/src/: lib.rs
