[package]
name = "namespace-attributes-test"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]

[dependencies]
namespace-attributes-macros = { path = "../namespace-attributes-macros" }
namespace-attributes-internals = { path = "../namespace-attributes-internals" }
serde = "1.0.75"
serde_derive = "1.0.75"
serde_json = "1.0.26"
